[tool.poetry]
name = "hyperstruct"
version = "0.0.9"
description = "Hyperstruct"
authors = ["Benjamin Crews <aceF22@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/czarified/hyperstruct"
repository = "https://github.com/czarified/hyperstruct"
documentation = "https://hyperstruct.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/czarified/hyperstruct/releases"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
click = ">=8.0.1, <9.0"
numpy = ">=1.26.4, <2.0"
scipy = ">=1.14.1, <2.0"
matplotlib = ">=3.10.1, <4.0"
pytest-check = ">=2.5.3, <3.0"
pandas = ">=2.3.0, <3.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8.0"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
sphinxcontrib-bibtex = "^2.6.3"

[tool.poetry.scripts]
hyperstruct = "hyperstruct.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["hyperstruct", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disable_error_code = ["import-untyped"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
